# termux-ndk

./: LICENSE.TXT  README.md  build_shaderc_tools.sh  get_source.sh
build-app/: README.md
build-app/GL2/: README.md  build.gradle
build-app/GL2/app/: build.gradle
build-app/GL2/app/src/main/cpp/: Android.mk  CMakeLists.txt  gl_code.cpp
build-app/GL3/: README.md  local.properties
build-app/GL3/app/: build.gradle
build-app/rust-example/: .gitignore  build.gradle.kts  settings.gradle.kts
cocos2d-game/: README.md
cocos2d-game/patches/: CCLuaEngine.cpp.patch  build_android.py.patch  setup.py.patch
docs/: BuildSystemMaintainers.md  Building.md  ClangMigration.md  ContinuousBuilds.md  Makefile  NdkGdbTesting.md  PlatformApis.md  README.md  Roadmap.md  Testing.md  Toolchains.md  UnifiedHeaders.md  UnifiedHeadersMigration.md  UpdatingDocumentation.md
docs/changelogs/: Changelog-r19.md  Changelog-r20.md  Changelog-r21.md  Changelog-r22.md  Changelog-r23.md
docs/user/: common_problems.md  middleware_vendors.md
patches/: align_fix.py
patches/cmake/: Android-Clang.cmake.patch  Android-Determine.cmake.patch  Android-Initialize.cmake.patch  Android.cmake.patch  Determine-Compiler.cmake.patch
patches/llvm_android/: base_builders.py.patch  builders.py.patch  configs.py.patch  do_build.py.patch  paths.py.patch
patches/llvm_project/: Editline.h.patch  IOHandlerCursesGUI.cpp.patch  vis.c.patch
patches/ndk/: android-legacy.toolchain.cmake.patch  android.toolchain.cmake.patch  ndk-build.patch  ndk_bin_common.sh.patch
patches/repo/: default.xml.patch
(+49 files in other folders)
